# rp2040-ntp-server

./: .gitmodules  CMakeLists.txt  README.md
src/: common.h  gps.cpp  gps.h  lwipopts.h  main.c  main.cpp  main.h  net.cpp  net.h  ntp.cpp  ntp.h  ref_clock.cpp  ref_clock.h  tusb_config.h  usb_descriptors.c
src/arch/: sys_arch.c
